Include the ai docs as part of storybook

--- a/.ai/testing/component_tests.mdx
+++ b/.ai/testing/component_tests.mdx
@@ -1,3 +1,7 @@
+import { Meta } from '@storybook/addon-docs/blocks';
+
+<Meta title="Testing/AI/Component Tests" />
+
 # Component-Level Tests (`test/wdio`)
 
 -   **Purpose:** To test the functionality of individual components or features in perfect isolation. These are our "unit tests" for component behavior.
