--- a/.ai/testing/e2e_tests.mdx
+++ b/.ai/testing/e2e_tests.mdx
@@ -1,3 +1,7 @@
+import { Meta } from '@storybook/addon-docs/blocks';
+
+<Meta title="Testing/AI/E2E Tests" />
+
 # End-to-End Tests (`test/end-to-end`)
 
 -   **Purpose:** To test the integration of multiple features and components working together. These tests simulate more complex, real-world scenarios.
