--- a/.ai/testing/matrix_generation.mdx
+++ b/.ai/testing/matrix_generation.mdx
@@ -1,3 +1,7 @@
+import { Meta } from '@storybook/addon-docs/blocks';
+
+<Meta title="Testing/AI/Matrix Generation" />
+
 # Matrix Generation for Component Permutations
 
 This document details the inner workings of the `*-coverage.js` scripts responsible for generating the permutation matrices that power our testing strategy. Understanding this process is crucial for ensuring the reliability of our coverage metrics, which serve as the source of truth for our GenAI-powered testing loop.
