--- a/.ai/testing/testing_strategy.mdx
+++ b/.ai/testing/testing_strategy.mdx
@@ -1,3 +1,7 @@
+import { Meta } from '@storybook/addon-docs/blocks';
+
+<Meta title="Testing/AI/Strategy" />
+
 # Stencil.js Testing Strategy
 
 This document outlines the testing strategy for the Stencil.js codebase, centered around a GenAI-powered loop. This ensures a comprehensive and robust testing suite that is both maintainable and scalable.
