--- a/.ai/testing/audit.mdx
+++ b/.ai/testing/audit.mdx
@@ -1,3 +1,7 @@
+import { Meta } from '@storybook/addon-docs/blocks';
+
+<Meta title="Testing/AI/Audit" />
+
 # Testing Strategy Audit Log
 
 This document tracks the progress and effectiveness of the GenAI-powered testing strategy over time. Each entry represents a significant iteration or application of the strategy to a specific feature set.
