--- a/.ai/testing/testing_strategy.mdx
+++ b/.ai/testing/testing_strategy.mdx
@@ -40,10 +40,10 @@ A key aspect of our strategy is recognizing the difference between **static cove
       <td><a href="./component_tests.md">Component Testing Docs</a></td>
     </tr>
     <tr>
-      <td><strong>Integration Tests</strong></td>
+      <td><strong>E2E Tests</strong></td>
       <td><code>test/end-to-end/</code></td>
       <td>Stencil's <code>newE2EPage()</code> (Puppeteer)</td>
-      <td>Verify that multiple features work correctly when used together.</td>
+      <td>Verify that features work correctly together (e.g. multiple decorators, render function) and that component behavior is correct in a browser environment.</td>
       <td><a href="./e2e_tests.mdx">E2E Testing Docs</a></td>
     </tr>
     <tr>
