--- a/.ai/testing/overview.mdx
+++ b/.ai/testing/overview.mdx
@@ -30,28 +30,28 @@ A key aspect of our strategy is recognizing the difference between **static cove
       <td><code>src/</code></td>
       <td>Jest</td>
       <td>Verify Stencil's internal logic and compiler functionality.</td>
-      <td><a href="./core_tests.mdx">Core Testing Docs</a></td>
+      <td>[Core Testing Docs](?path=/docs/testing-core-tests--docs)</td>
     </tr>
     <tr>
       <td><strong>Component Tests</strong></td>
       <td><code>test/wdio/</code></td>
       <td>WebdriverIO (<code>@wdio/browser-runner/stencil</code>)</td>
       <td>Verify individual features in isolation and satisfy static analysis.</td>
-      <td><a href="./component_tests.md">Component Testing Docs</a></td>
+      <td>[Component Testing Docs](?path=/docs/testing-component-tests--docs)</td>
     </tr>
     <tr>
       <td><strong>E2E Tests</strong></td>
       <td><code>test/end-to-end/</code></td>
       <td>Stencil's <code>newE2EPage()</code> (Puppeteer)</td>
       <td>Verify that features work correctly together (e.g. multiple decorators, render function) and that component behavior is correct in a browser environment.</td>
-      <td><a href="./e2e_tests.mdx">E2E Testing Docs</a></td>
+      <td>[E2E Testing Docs](?path=/docs/testing-e2e-tests--docs)</td>
     </tr>
     <tr>
       <td><strong>Decorator Coverage</strong></td>
       <td><code>test/storybook/</code></td>
       <td>Static Analysis</td>
       <td>Ensure all permutations of decorator options are tested.</td>
-      <td><a href="./Decorators/Overview.mdx">Decorator Coverage Docs</a></td>
+      <td>[Decorator Coverage Docs](?path=/docs/testing-decorator-coverage--docs)</td>
     </tr>
   </tbody>
 </table>
@@ -99,7 +99,7 @@ This approach allows us to harness the collective intelligence and diverse capab
 
 This testing strategy is a living document. We will continue to refine our approach, adopt new tools, and improve our processes over time to ensure Stencil remains a reliable and high-quality framework for all developers.
 
-A core tenet of this continuous improvement is the practice of documenting our learnings. After each major testing iteration, we will update the relevant documentation—including this strategy, the component-level and end-to-end testing guides, and the [audit log](./audit.md)—with any new insights, patterns, or challenges we encountered. This ensures that our institutional knowledge grows with our test suite.
+A core tenet of this continuous improvement is the practice of documenting our learnings. After each major testing iteration, we will update the relevant documentation—including this strategy, the component-level and end-to-end testing guides, and the [audit log](?path=/docs/testing-audit--docs)—with any new insights, patterns, or challenges we encountered. This ensures that our institutional knowledge grows with our test suite.
 
 **Key areas for learning documentation include:**
 
