--- a/.ai/testing/e2e_tests.mdx
+++ b/.ai/testing/e2e_tests.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Testing/E2E" />
+<Meta title="Testing/E2E Tests" />
 
 # E2E Testing
 
