Add a clear roadmap for 2025

--- a/.ai/testing/overview.mdx
+++ b/.ai/testing/overview.mdx
@@ -93,3 +93,31 @@ A core tenet of this continuous improvement is the practice of documenting our l
 As this is our first time implementing the GenAI-powered loop, we anticipate a learning period where mistakes are possible. Our commitment is to learn from these experiences and rapidly evolve towards a rock-solid automated testing framework.
 
 By adhering to this strategy, we build a comprehensive test suite that is both robust and maintainable, ensuring that Stencil remains a reliable tool for developers.
+
+---
+
+<div style={{ marginTop: '3rem', textAlign: 'center' }}>
+  <span style={{
+    fontSize: 36,
+    fontWeight: 800,
+    color: '#3b82f6',
+    background: '#fff',
+    borderRadius: 20,
+    padding: '3rem 4rem',
+    display: 'inline-block',
+    boxShadow: '0 8px 32px rgba(59,130,246,0.10)',
+    letterSpacing: '0.03em',
+    border: '3px solid #0ea5e9',
+    marginBottom: '2.5rem',
+    textShadow: 'none',
+    position: 'relative',
+    overflow: 'hidden'
+  }}>
+    <span style={{ display: 'block', fontSize: 28, color: '#0ea5e9', fontWeight: 900, marginBottom: 18, zIndex: 1, position: 'relative', letterSpacing: '0.04em' }}>
+      🚀 [2025 Testing Roadmap: Dive into the future of Stencil.js testing!](?path=/docs/testing-roadmap-2025--docs) 🚀
+    </span>
+    <span style={{ display: 'block', fontSize: 20, color: '#6366f1', fontWeight: 500, marginTop: 18, zIndex: 1, position: 'relative', letterSpacing: '0.02em' }}>
+      Next-gen coverage, GenAI-powered automation, and SSR mastery await.
+    </span>
+  </span>
+</div>
