--- a/.ai/testing/roadmap-2025.mdx
+++ b/.ai/testing/roadmap-2025.mdx
@@ -4,8 +4,6 @@ import { Meta } from '@storybook/addon-docs/blocks';
 
 # Stencil.js Testing Roadmap 2025
 
-This document provides a detailed roadmap for the Stencil.js testing strategy in 2025, including milestones, expected dates, and a visual timeline for tracking progress.
-
 <div style={{ width: '100%', marginBottom: '2rem', position: 'relative', height: 100 }}>
   <div style={{ position: 'absolute', left: 0, right: 0, top: 48, height: 4, background: '#e5e7eb', borderRadius: 2 }}></div>
   <div style={{ position: 'absolute', left: '5%', top: 36, textAlign: 'center', width: '90%' }}>
@@ -17,17 +15,13 @@ This document provides a detailed roadmap for the Stencil.js testing strategy in
       <div style={{ width: 18, height: 18, background: '#c7f9cc', borderRadius: '50%', border: '2px solid #22c55e', margin: '0 auto' }}></div>
       <div style={{ fontSize: 12, color: '#22c55e', marginTop: 4 }}>Begin Sept</div>
     </span>
-    <span style={{ position: 'absolute', left: '32%', transform: 'translateX(-50%)' }}>
+    <span style={{ position: 'absolute', left: '36%', transform: 'translateX(-50%)' }}>
       <div style={{ width: 18, height: 18, background: '#ffe5b4', borderRadius: '50%', border: '2px solid #f59e42', margin: '0 auto' }}></div>
       <div style={{ fontSize: 12, color: '#f59e42', marginTop: 4 }}>Mid Sept</div>
     </span>
-    <span style={{ position: 'absolute', left: '48%', transform: 'translateX(-50%)' }}>
-      <div style={{ width: 18, height: 18, background: '#ffd6e0', borderRadius: '50%', border: '2px solid #e11d48', margin: '0 auto' }}></div>
-      <div style={{ fontSize: 12, color: '#e11d48', marginTop: 4 }}>End Sept</div>
-    </span>
-    <span style={{ position: 'absolute', left: '64%', transform: 'translateX(-50%)' }}>
+    <span style={{ position: 'absolute', left: '60%', transform: 'translateX(-50%)' }}>
       <div style={{ width: 18, height: 18, background: '#b5ead7', borderRadius: '50%', border: '2px solid #0f766e', margin: '0 auto' }}></div>
-      <div style={{ fontSize: 12, color: '#0f766e', marginTop: 4 }}>Begin Oct</div>
+      <div style={{ fontSize: 12, color: '#0f766e', marginTop: 4 }}>October</div>
     </span>
     <span style={{ position: 'absolute', left: '88%', transform: 'translateX(-50%)' }}>
       <div style={{ width: 18, height: 18, background: '#c4fff9', borderRadius: '50%', border: '2px solid #0ea5e9', margin: '0 auto' }}></div>
@@ -42,54 +36,45 @@ This document provides a detailed roadmap for the Stencil.js testing strategy in
 
 <ul style={{ listStyle: 'none', paddingLeft: 0 }}>
   <li style={{ marginBottom: '1.2rem', display: 'flex', alignItems: 'center' }}>
-    <span style={{ display: 'inline-block', width: 8, height: 48, background: '#e0e7ff', borderRadius: 4, marginRight: 16 }}></span>
+    <span style={{ display: 'inline-block', width: 8, height: 48, background: '#e0e7ff', borderRadius: 4, marginRight: 16, border: '2px solid #6366f1' }}></span>
     <div>
       <strong style={{ color: '#6366f1' }}>GenAI Testing Loop Launch</strong><br />
       <span style={{ color: 'black' }}>Implement GenAI-powered iterative testing loop for decorator permutations.</span>
     </div>
   </li>
   <li style={{ marginBottom: '1.2rem', display: 'flex', alignItems: 'center' }}>
-    <span style={{ display: 'inline-block', width: 8, height: 48, background: '#c7f9cc', borderRadius: 4, marginRight: 16 }}></span>
+    <span style={{ display: 'inline-block', width: 8, height: 48, background: '#c7f9cc', borderRadius: 4, marginRight: 16, border: '2px solid #22c55e' }}></span>
     <div>
       <strong style={{ color: '#22c55e' }}>Decorator Permutation Coverage</strong><br />
       <span style={{ color: 'black' }}>Generate component tests for all decorator permutations. Start with a subset, expand coverage iteratively.</span>
     </div>
   </li>
   <li style={{ marginBottom: '1.2rem', display: 'flex', alignItems: 'center' }}>
-    <span style={{ display: 'inline-block', width: 8, height: 48, background: '#ffe5b4', borderRadius: 4, marginRight: 16 }}></span>
+    <span style={{ display: 'inline-block', width: 8, height: 48, background: '#ffe5b4', borderRadius: 4, marginRight: 16, border: '2px solid #f59e42' }}></span>
     <div>
       <strong style={{ color: '#f59e42' }}>Render Function Coverage</strong><br />
       <span style={{ color: 'black' }}>Generate comprehensive tests for render function permutations.</span>
     </div>
   </li>
   <li style={{ marginBottom: '1.2rem', display: 'flex', alignItems: 'center' }}>
-    <span style={{ display: 'inline-block', width: 8, height: 48, background: '#ffd6e0', borderRadius: 4, marginRight: 16 }}></span>
-    <div>
-      <strong style={{ color: '#e11d48' }}>Iterative AI Improvement</strong><br />
-      <span style={{ color: 'black' }}>Record learnings after each cycle to improve AI test generation. Ongoing throughout 2025.</span>
-    </div>
-  </li>
-  <li style={{ marginBottom: '1.2rem', display: 'flex', alignItems: 'center' }}>
-    <span style={{ display: 'inline-block', width: 8, height: 48, background: '#b5ead7', borderRadius: 4, marginRight: 16 }}></span>
+    <span style={{ display: 'inline-block', width: 8, height: 48, background: '#b5ead7', borderRadius: 4, marginRight: 16, border: '2px solid #0f766e' }}></span>
     <div>
       <strong style={{ color: '#0f766e' }}>Complex Components & E2E Testing</strong><br />
       <span style={{ color: 'black' }}>Generate complex components and E2E tests (decorator collisions, real-world scenarios). Reference Ionic framework components for coverage.</span>
     </div>
   </li>
   <li style={{ marginBottom: '1.2rem', display: 'flex', alignItems: 'center' }}>
-    <span style={{ display: 'inline-block', width: 8, height: 48, background: '#ffdac1', borderRadius: 4, marginRight: 16 }}></span>
-    <div>
-      <strong style={{ color: '#b45309' }}>Comprehensive Scenario Coverage</strong><br />
-      <span style={{ color: 'black' }}>Achieve 100% coverage for component and E2E tests. Shift focus to edge cases and diverse scenarios.</span>
-    </div>
-  </li>
-  <li style={{ marginBottom: '1.2rem', display: 'flex', alignItems: 'center' }}>
-    <span style={{ display: 'inline-block', width: 8, height: 48, background: '#c4fff9', borderRadius: 4, marginRight: 16 }}></span>
+    <span style={{ display: 'inline-block', width: 8, height: 48, background: '#c4fff9', borderRadius: 4, marginRight: 16, border: '2px solid #0ea5e9' }}></span>
     <div>
       <strong style={{ color: '#0ea5e9' }}>Advanced Feature Testing</strong><br />
       <span style={{ color: 'black' }}>Expand to SSR support and output targets (framework integrations). <b>SSR coverage will be an ongoing effort through the end of 2025, requiring sustained work and iteration.</b></span>
     </div>
   </li>
+</ul>
+
+<ul style={{ marginTop: '2rem', marginBottom: '2rem', paddingLeft: 24, fontSize: 15 }}>
+  <li><strong style={{ color: '#b45309' }}>Comprehensive Scenario Coverage:</strong> Ongoing effort throughout 2025. We will continually identify and address gaps in coverage, leveraging community contributions and AI-powered analysis of GitHub issues and Stencil component libraries.</li>
+  <li><strong style={{ color: '#e11d48' }}>Iterative AI Improvement:</strong> Record learnings after each cycle to improve AI test generation. Ongoing throughout 2025.</li>
 </ul>
 
 <p style={{ marginTop: '2rem', fontSize: 14 }}>
